# simplecountry

./: CHANGELOG.md  Cargo.toml  README.md
src/: continent.rs  country.rs  event.rs  lib.rs  person.rs  thing.rs  work.rs
