[package]
name = "simplecountry"
version = "0.1.1"
authors = ["imsi32"]
edition = "2021"
rust-version = "1.67.0"
description = "Simple Country Library"
readme = "README.md"
repository = "https://github.com/imsi32/simplecountry"
license = "GPL-3.0-or-later"
keywords = ["country"]
categories = ["data-structures", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.30"
